Some radical redesign work. No publish script yet :)

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Gantari:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <!-- Library libs_ext -->
+    <!-- Library libs_ext --> 
     <script src="static/js/libs_ext/typeahead.bundle.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <!--    Internal Libs -->
@@ -93,8 +95,7 @@
 ('index.html', 'Home'),
 ('calendar.html', 'Schedule'),
 ('papers.html', 'Papers'),
-('workshops.html', 'Workshops'),
-('chat.html', 'Chat'),
+('tutorials.html', 'Tutorials'),
 ('help.html', 'Help'),
 ] -%}
 
@@ -196,6 +197,7 @@
         $(window).scrollTop(position);
       }
     });
+   
   });
 </script>
 <!--    <script src="static/js/modules/lazyLoad.js"></script>-->
