--- a/templates/poster.html
+++ b/templates/poster.html
@@ -22,13 +22,12 @@
 
 {% block content %}
 
-<!-- Title -->
-<div class="pp-card m-3" style="">
+<div class="pp-card m-3" style="background-color: #fff">
     <div class="card-header">
-        <h2 class="card-title main-title text-center" style="">
+        <h2 class="card-title main-title text-left" style="color: #4383EC">
             {{paper.title}}
         </h2>
-        <h3 class="card-subtitle mb-2 text-muted text-center">
+        <h3 class="card-subtitle mb-2 text-muted text-left">
             {% for author in paper.authors %}
             <a href="papers.html?filter=authors&search={{author}}"
                class="text-muted"
@@ -36,7 +35,7 @@
             >{{ "," if not loop.last }}
             {% endfor %}
         </h3>
-        <p class="card-text text-center">
+        <p class="card-text text-left">
             <span class="">Keywords:</span>
             {% for keyword in paper.keywords %}
             <a
@@ -46,23 +45,9 @@
             >{{ "," if not loop.last }}
             {% endfor %}
         </p>
-        <div class="text-center p-3">
-            <a class="card-link" data-toggle="collapse" role="button"
-               href="#details">
-                Abstract
-            </a>
-            <a class="card-link" target="_blank" href="{{paper.link}}">
-                Paper
-            </a>
-            {% if paper.code_link != blank %}
-            <a href="{{paper.code_link}}" target="_blank" class="card-link">
-                Code
-            </a>
-            {% endif %}
-        </div>
     </div>
 </div>
-<div id="details" class="pp-card m-3 collapse">
+<div id="details" class="pp-card m-3">
     <div class="card-body">
         <div class="card-text">
             <div id="abstractExample">
@@ -74,62 +59,90 @@
     </div>
 </div>
 
-<h5 style="color: red;">
-    Add content for posters. This could be a video, embedded pdf, chat room ....
-</h5>
 
-<!-- Chat -->
-{{ components.section("Example Chat") }}
+  
+  <div class="text-center">
+    <ul class="nav nav-tabs" id="posterTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="paper-tab" data-toggle="tab" href="#paper" role="tab" aria-controls="paper" aria-selected="true">Paper</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="poster-tab" data-toggle="tab" href="#poster" role="tab" aria-controls="poster" aria-selected="false">Poster</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="video-tab" data-toggle="tab" href="#video" role="tab" aria-controls="video" aria-selected="false">Video</a>
+      </li>
+    </ul>
+  </div>
+  
 
-<div class="col-md-12 col-xs-12 p-2">
-    <div id="gitter" class="slp">
-        <center>
-            <iframe frameborder="0"
-                    src="https://{{config.chat_server}}/channel/paper_{{paper.UID}}?layout=embedded"
-                    height="700px" width="100%"></iframe>
-        </center>
+  <div class="tab-content" id="posterTabsContent">
+    <div class="tab-pane fade show active" id="paper" role="tabpanel" aria-labelledby="paper-tab">
+      {% if paper.pdf_url %}
+      <div style="height: 80vh;">
+        <iframe src="{{ paper.pdf_url | replace('/view?usp=sharing', '/preview') | replace('/view', '/preview') }}" 
+                width="100%" 
+                height="100%" 
+                frameborder="0"
+                allow="autoplay"></iframe>
+      </div>
+      {% else %}
+      <p class="text-center mt-3"><em>No paper available</em></p>
+      {% endif %}
     </div>
-</div>
-
-<!-- Slides Live-->
-
-{{ components.section("Example SlidesLive") }}
-
-<div class="col-md-12 col-xs-12 my-auto p-2">
-    <div id="presentation-embed" class="slp my-auto"></div>
-    <script src='https://slideslive.com/embed_presentation.js'></script>
-    <script>
-      embed = new SlidesLiveEmbed("presentation-embed", {
-        presentationId:
-          "{{paper.presentation_id | default(config.default_presentation_id)}}",
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: true,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true,
-      });
-    </script>
-</div>
-
-
-<!-- Chat -->
-
-{{ components.section("Example Poster") }}
-
-<div role="main" id="pdf_view"></div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.3.200/build/pdf.min.js"></script>
-<script src="static/js/modules/pdfRender.js"></script>
-<script>
-  $(document).ready(() => {
-    // render first page of PDF to div
-    // PDF name can be bound to variable -- e.g. paper.content.poster_link
-    const pdfFile =
-      " {{ paper.poster_pdf | default(config.default_poster_pdf) }}";
-    initPDFViewer(pdfFile, "#pdf_view");
+  
+    <div class="tab-pane fade" id="poster" role="tabpanel" aria-labelledby="poster-tab">
+      {% if paper.poster_pdf %}
+      <div style="height: 80vh;">
+        <iframe src="{{ paper.poster_pdf | replace('/view?usp=sharing', '/preview') | replace('/view', '/preview') }}" 
+                width="100%" 
+                height="100%" 
+                frameborder="0"
+                allow="autoplay"></iframe>
+      </div>
+      {% else %}
+      <p class="text-center mt-3"><em>No poster available</em></p>
+      {% endif %}
+    </div>
+  
+    <div class="tab-pane fade" id="video" role="tabpanel" aria-labelledby="video-tab">
+      {% if paper.video_url %}
+      <div class="text-center">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" 
+                  src="{{ paper.video_url | replace('/view?usp=sharing', '/preview') | replace('/view', '/preview') }}" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+      {% else %}
+      <p class="text-center mt-3"><em>No video available</em></p>
+      {% endif %}
+    </div>
+  </div>
+  
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    // Ensure jQuery and Bootstrap are loaded
+    if (typeof $ === 'undefined') {
+      console.error('jQuery is not loaded');
+      return;
+    }
+    
+    // Initialize all tabs
+    $('#posterTabs a').on('click', function (e) {
+      e.preventDefault();
+      $(this).tab('show');
+    });
+  
+    // Show paper tab by default
+    $('#posterTabs a[href="#paper"]').tab('show');
+    MathJax.typesetPromise().then(() => {
+    // modify the DOM here
+        MathJax.typesetPromise();
+    }).catch((err) => console.log(err.message));
   });
-</script>
-
-
-{% endblock %}
+  </script>
+  
+  {% endblock %}
