--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ label:text-muted,
 
 body {
   font-family: "Lato", sans-serif;
-  background-color: rgba(236, 241, 246, 1);
+  /* background-color: rgba(236, 241, 246, 1); */
 }
 
 .container a:hover {
@@ -57,12 +57,13 @@ body {
 }
 
 .pp-card-header {
-  border: 4px solid #eee;
+  border: 2px solid #eee !important;
   font-family: "Gantari";
   height: 340px;
   padding-top: 10px;
   padding-left: 15px;
   padding-right: 15px;
+  /* border-radius: 1px; */
 }
 
 .pp-mode-mini .pp-card-header {
@@ -96,15 +97,15 @@ body .nav-pills .nav-link.active {
 }
 
 .card {
-  font-family: "Exo";
+  font-family: "Lato";
 }
 
 .card-header {
-  font-family: "Exo";
+  font-family: "Gantari";
 }
 
 .card-header .card-title {
-  font-family: "Exo";
+  font-family: "Gantari";
 }
 
 .cards.myCard {
@@ -121,6 +122,7 @@ body .nav-pills .nav-link.active {
 .card-title {
   margin-top: 10px;
   font-size: 20px;
+  color: #C3542E;
 }
 
 h2.card-title {
@@ -134,14 +136,16 @@ h3.card-subtitle.text-muted {
 }
 
 .card-subtitle.text-muted {
-  text-align: center;
+  text-align: left;
   font-size: 13px;
 }
 
 .main-title {
   font-weight: 700;
-  color: #2294e0;
-  font-family: "Exo";
+  color: #C3542E;
+  /* color: rgb(67,131,236); */
+  font-family: "Gantari";
+
 }
 
 .myAccordion {
