--- a/templates/components.html
+++ b/templates/components.html
@@ -235,3 +235,30 @@ workshopgroup
   {% endfor %}
 </div>
 {%- endmacro %}
+
+{% macro tutorialgroup(workshops) -%}
+<div class="cards row">
+  {% for workshop in workshops %}
+  <div class="col-md-6 col-sm-12 p-3" style="box-sizing: border-box;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+      <div
+        class="card-header text-left"
+        style="min-height: 200px; width: 100%;"
+      >
+        <a class="text-muted" href="tutorial_{{workshop.UID}}.html">
+          <h3 class="card-title main-title">
+            {{workshop.title}}
+          </h3>
+        </a>
+        <div class="card-subtitle text-muted">
+          {{ workshop.presenters }}
+        </div>
+        <div class="mt-3 mb-3 text-left card-subtitle font-italic" style="font-size: 0.95em">
+          {{workshop.abstract|safe}}
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+{%- endmacro %}
