Remove home page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,8 +92,7 @@
 <!-- NAV -->
 {% block header %}
 {% set navigation_bar = [
-('index.html', 'Home'),
-('calendar.html', 'Schedule'),
+('index.html', 'Schedule'),
 ('papers.html', 'Papers'),
 ('tutorials.html', 'Tutorials'),
 ('help.html', 'Help'),
