--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,7 @@ label:text-muted,
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Gantari", sans-serif;
   /* background-color: rgba(236, 241, 246, 1); */
 }
 
@@ -42,6 +42,8 @@ body {
 #main-nav {
   padding-top: 10px;
   padding-bottom: 10px;
+  background-color: #fff !important;
+  border-bottom: 1px dotted #ccc;
 }
 
 .header {
@@ -89,7 +91,8 @@ body {
 }
 
 body .nav-pills .nav-link.active {
-  background-color: #bed972;
+  background-color: #4383EC;
+  color: white !important;
 }
 
 .container {
