--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -1,7 +1,15 @@
 {% set active_page = "Tutorials" %}
 {% set page_title = "Tutorials" %}
 {% extends "base.html" %}
-
+{{ components.navtabs([
+  ("calendar.html", "Calendar", "calendar-html"),
+  ("tutorials.html", "Nov 10", "tutorials-html"),
+  ("day_2.html", "Nov 11", "day_2-html"),
+  ("day_3.html", "Nov 12", "day_3-html"),
+  ("day_4.html", "Nov 13", "day_4-html"),
+  ("day_5.html", "Nov 14", "day_5-html"),
+  ])
+}}
 {% block content %}
 <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
   <div id="day">
