--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 ('index.html', 'Schedule'),
 ('papers.html', 'Papers'),
 ('tutorials.html', 'Tutorials'),
-('help.html', 'Help'),
+('lbds.html', 'LBDs')
 ] -%}
 
 <nav
