--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -14,6 +14,7 @@
   ("day_3.html", "Nov 12", "day_3-html"),
   ("day_4.html", "Nov 13", "day_4-html"),
   ("day_5.html", "Nov 14", "day_5-html"),
+  ("day_6.html", "Nov 15", "day_6-html"),
   ])
 }}
 {% endblock %}
