Remove extra slash

--- a/templates/components.html
+++ b/templates/components.html
@@ -65,7 +65,7 @@ workshopgroup
             </div>
             <div class="m-3 text-muted">
               <span class="card-title h3">
-                {{speaker.organiser}}  /  {{speaker.organiser_affiliation}}
+                {{speaker.organiser}} 
               </span>
             </div>
             <div class="m-3 text-left card-subtitle">
