--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,8 @@
 ('index.html', 'Schedule'),
 ('papers.html', 'Papers'),
 ('tutorials.html', 'Tutorials'),
-('lbds.html', 'LBDs')
+('lbds.html', 'LBDs'),
+('industry.html', 'Industry')
 ] -%}
 
 <nav
