--- a/templates/components.html
+++ b/templates/components.html
@@ -72,9 +72,9 @@ workshopgroup
               {{local_date_a[0]}} | {{local_date_a[1]}} ({{ timezone }})
             </div>
 
-            <div class="m-3 text-center">
+            <div class="m-3 text-left">
             {% if speaker.channel_url %}
-              <a href="{{speaker.channel_url}}" class="btn btn-primary mr-3">{% include 'slack_svg.html' %} {{speaker.slack_channel}}</a>
+              <a href="{{speaker.channel_url}}" class="btn btn-primary mr-3" style="background-color: #2294e0;">{% include 'slack_svg.html' %} {{speaker.slack_channel}}</a>
             {% endif %}
             </div>
 
@@ -401,9 +401,9 @@ workshopgroup
         <div class="m-3 text-left card-subtitle" style="display:flex; align-content: center;">
           {{local_date[0]}} | {{local_date[1]}} ({{ timezone }})
         </div>
-      <div class="m-3 text-center">
+      <div class="m-3 text-left">
        {% if meet.channel_url %}
-         <a href="{{meet.channel_url}}" class="btn btn-primary mr-3">{% include 'slack_svg.html' %} {{meet.slack_channel}}</a>
+         <a href="{{meet.channel_url}}" class="btn btn-primary mr-3" style="background-color: #2294e0;">{% include 'slack_svg.html' %} {{meet.slack_channel}}</a>
         {% endif %}
         </div>
         <div class="mt-3 ml-3 mr-3 mb-4 text-left card-subtitle">
