Add jobs page and embed data where possible!

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,8 @@
 ('papers.html', 'Papers'),
 ('tutorials.html', 'Tutorials'),
 ('lbds.html', 'LBDs'),
-('industry.html', 'Industry')
+('industry.html', 'Industry'),
+('jobs.html', 'Jobs')
 ] -%}
 
 <nav
