--- a/templates/industry.html
+++ b/templates/industry.html
@@ -3,6 +3,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{{ components.section("Sponsors") }}
+
 <div class="container">
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" id="sponsorTabs" role="tablist">
