--- a/templates/sponsor_booth.html
+++ b/templates/sponsor_booth.html
@@ -4,12 +4,12 @@
 {% block content %}
 <!-- Title -->
 <div class="pp-card m-3" style="">
-    <div class="card-header">
+    <div class="card-header" style="background-color: rgba(0,0,0,0);">
         <h2 class="card-title main-title text-left" style="">
         {{industry.title}}
         </h2>
         {% if industry.channel_url %}
-        <a href="{{industry.channel_url}}" class="btn btn-primary mr-3" style="background-color: #2294e0;">{% include 'slack_svg.html' %} {{industry.slack_channel}}</a>
+        <a href="{{industry.channel_url}}" class="btn btn-primary mr-3" style="background-color: #2294e0;">{% include 'slack_svg.html' %} {{industry.channel_name}}</a>
         {% endif %}       
     </div>
 </div>
@@ -28,9 +28,27 @@
             {{industry.abstract|markdown}}
         </div>
         {% endif %}
-        {% if industry.regitered_email %}
+
+        {% if industry.pdf %}
+        <div class="pdf_embed"> 
+            <iframe src="{{industry.pdf | replace('view?usp=sharing', 'preview')}}" width="100%" height="800px"></iframe>            
+        </div>
+        {% endif %}
+
+        {% if industry.video %}
+        <div class="video_embed"> 
+            <iframe width="100%" height="315" src="{{industry.video}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        {% endif %}
+
+        {% if industry.registered_email %}
         <div class="email">
-            Contact: <a href="mailto:{{industry.registered_email}}" class="card-link"> {{industry.registered_email}} </a>
+            Contact:
+            {% set emails = industry.registered_email.split("\n") %}
+            {% for email in emails %}
+            <span> <a href="mailto:{{industry.registered_email}}" class="card-link"> {{email}} </a> </span> <br/> 
+            {% endfor %}
+        </div>
         {% endif %}
         </div>
         {% if industry.company_url %}
@@ -38,6 +56,7 @@
             Visit: <a href="{{industry.company_url}}" class="card-link"> {{industry.company_url}} </a>
         </div>
         {% endif %}
+       
     </div>
 </div>
 <!-- Presentation Embed -->
