Fix an errant bug with the HTML template

--- a/templates/industry.html
+++ b/templates/industry.html
@@ -32,7 +32,7 @@
         {% for sponsor in industry if sponsor.level == "Diamond" %}
         <div class="col-12 mb-4">
             <div class="sponsor-card d-flex flex-column align-items-center">
-            <a href="/industry_{{sponsor.UID}}"> <h3>{{sponsor.title}}</h3> 
+            <a href="/industry_{{sponsor.UID}}.html"> <h3>{{sponsor.title}}</h3> 
             <img src="/static/images/{{sponsor.image}}" alt="{{sponsor.title}}" class="img-fluid" style="max-width: 300px;">      
             </a>
           </div>
