--- a/templates/industry.html
+++ b/templates/industry.html
@@ -5,7 +5,7 @@
 
 {{ components.section("Sponsors") }}
 
-<div class="container">
+<div class="content">
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" id="sponsorTabs" role="tablist">
     <li class="nav-item">
