--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="content">
     <div class="row">
         {{ components.section("Jobs") }}
     </div>
